methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:4: error: '=' expected but identifier found.
def faire V() {while (!estFaceMur()) {gauche()};
          ^PictureMono1:25: error: illegal start of simple expression
              for (k<- 1 to 4) {avance();avance();avance();faire V();avance();avance();avance();gauche();}
^