methods.picture.PictureMono1.scala.code
override def run() {


def faire V() {while (!estFaceMur()) {gauche()};
              recule()
               baisseBrosse()
               leveBrosse()
               
               gauche()
               avance()
               
               droite()
               avance()
               baisseBrosse()
               leveBrosse()
               droite()
               avance()
               avance()
               baisseBrosse()
               
               leveBrosse()
              retourne()
              avance()}

							for (k<- 1 to 4) {avance();avance();avance();faire V();avance();avance();avance();gauche();}
}